--- a/halftime.html
+++ b/halftime.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
             <a href = 'index.html'>Home</a>
-            <a href = '#'>Page</a>
+            <a href = 'template.html'>FAQ's</a>
             <a href = 'site-plan-rafting.html'>Site Plan</a>
             <a href = 'contactus1.html'>Contact Us </a>
         </nav>
